--- a/be/package.json
+++ b/be/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest dist/routes/*.test.js --detectOpenHandles",
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
@@ -23,10 +23,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.2",
+    "@types/supertest": "^2.0.12",
     "concurrently": "^7.6.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
     "typescript": "^4.9.5"
   }
 }
