--- a/be/package.json
+++ b/be/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest dist/routes/*.test.js --detectOpenHandles",
+    "test2": "jest ./dist/routes/*.test.js --detectOpenHandles",
+    "test": "jest",
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
