--- a/be/package.json
+++ b/be/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb-memory-server": "^8.12.1",
     "mongoose": "^7.0.3",
     "zod": "^3.20.6"
   },
